--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@vercel/analytics": "^1.3.1",
         "@vercel/postgres": "^0.8.0",
         "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
         "babel-eslint": "^10.1.0",
