--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@vercel/analytics": "^1.3.1",
         "@vercel/postgres": "^0.8.0",
+        "@vercel/speed-insights": "^1.0.12",
         "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
         "babel-eslint": "^10.1.0",
         "eslint-config-prettier": "^9.1.0",
