--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "minimap.background": "#00000070",
         "scrollbar.shadow": "#00000070"
     },
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "vsicons.presets.nestjs": true
 }
