--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-qr-reader": "^3.0.0-beta-1",
+        "react-rewards": "^2.0.4",
         "react-scroll": "^1.9.0",
         "url-loader": "^4.1.1",
         "use-sound": "^2.2.0"
