--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "babel-eslint": "^10.1.0",
         "eslint-config-prettier": "^9.1.0",
         "file-loader": "^6.2.0",
-        "next": "14.1.1",
+        "next": "^14.2.5",
         "react": "^18",
         "react-dom": "^18",
         "react-qr-reader": "^3.0.0-beta-1",
